--- a/SwitchQueryService.csproj
+++ b/SwitchQueryService.csproj
@@ -62,6 +62,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwitchQuery.cs" />
+    <Compile Include="TelnetInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
